syntax = "proto3";

package pricing.v1;

option go_package = "github.com/MuhibNayem/Travio/server/api/proto/pricing/v1;pricingv1";

service PricingService {
  // Calculate final price based on rules
  rpc CalculatePrice(CalculatePriceRequest) returns (CalculatePriceResponse);
  
  // Admin: Get all pricing rules
  rpc GetRules(GetRulesRequest) returns (GetRulesResponse);
  
  // Admin: Create a new pricing rule
  rpc CreateRule(CreateRuleRequest) returns (CreateRuleResponse);
  
  // Admin: Update a pricing rule
  rpc UpdateRule(UpdateRuleRequest) returns (UpdateRuleResponse);
  
  // Admin: Delete a pricing rule
  rpc DeleteRule(DeleteRuleRequest) returns (DeleteRuleResponse);

  // Promotions
  rpc CreatePromotion(CreatePromotionRequest) returns (CreatePromotionResponse);
  rpc GetPromotions(GetPromotionsRequest) returns (GetPromotionsResponse);
}

message CalculatePriceRequest {
  string trip_id = 1;
  string seat_class = 2;
  string date = 3;
  int32 quantity = 4;
  int64 base_price_paisa = 5;
  double occupancy_rate = 6;
  string organization_id = 7; // For operator-specific overrides
  int64 departure_time = 8;   // Unix timestamp (seconds)
  string route_id = 9;
  string schedule_id = 10;
  string from_station_id = 11;
  string to_station_id = 12;
  string seat_category = 13;
  string vehicle_type = 14;
  string vehicle_class = 15;
  string promo_code = 16;
}

message CalculatePriceResponse {
  int64 final_price_paisa = 1;
  int64 base_price_paisa = 2;
  repeated AppliedRule applied_rules = 3;
  PromotionApplied promotion_applied = 4;
}

message PromotionApplied {
  string promo_code = 1;
  int64 discount_amount_paisa = 2;
}

message AppliedRule {
  string rule_id = 1;
  string rule_name = 2;
  double multiplier = 3;
}

message PricingRule {
  string id = 1;
  string organization_id = 2; // Null/Empty for Global
  string name = 3;
  string description = 4;
  string condition = 5;
  double multiplier = 6;
  string adjustment_type = 7;  // multiplier, additive, override
  double adjustment_value = 8; // When adjustment_type != multiplier
  int32 priority = 9;
  bool is_active = 10;
  string created_at = 11;
  string updated_at = 12;
}

message GetRulesRequest {
  bool include_inactive = 1;
  string organization_id = 2; // Filter
}

message GetRulesResponse {
  repeated PricingRule rules = 1;
}

message CreateRuleRequest {
  string organization_id = 1;
  string name = 2;
  string description = 3;
  string condition = 4;
  double multiplier = 5;
  string adjustment_type = 6;
  double adjustment_value = 7;
  int32 priority = 8;
}

message CreateRuleResponse {
  PricingRule rule = 1;
}

message UpdateRuleRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string condition = 4;
  double multiplier = 5;
  string adjustment_type = 6;
  double adjustment_value = 7;
  int32 priority = 8;
  bool is_active = 9;
}

message UpdateRuleResponse {
  PricingRule rule = 1;
}

message DeleteRuleRequest {
  string id = 1;
}

message DeleteRuleResponse {
  bool success = 1;
}

message Promotion {
  string id = 1;
  string code = 2;
  string description = 3;
  string discount_type = 4; // PERCENT, FIXED_AMOUNT
  double discount_value = 5; 
  int64 max_usage = 6;
  int64 current_usage = 7;
  string valid_from = 8; // ISO8601
  string valid_until = 9; // ISO8601
  int64 min_order_amount_paisa = 10;
  bool is_active = 11;
  string organization_id = 12;
}

message CreatePromotionRequest {
  string code = 1;
  string description = 2;
  string discount_type = 3; 
  double discount_value = 4; // e.g., 10.0 for 10% or 500 for 500 paisa
  int64 max_usage = 5;
  string valid_from = 6;
  string valid_until = 7;
  int64 min_order_amount_paisa = 8;
  string organization_id = 9;
}

message CreatePromotionResponse {
  Promotion promotion = 1;
}

message GetPromotionsRequest {
  string organization_id = 1;
  bool active_only = 2;
}

message GetPromotionsResponse {
  repeated Promotion promotions = 1;
}
